assets/scss/_nav.scss
@import '_global.scss';

.curve-container {
    position: relative;
    .curve {
        position: absolute;
        background: white;
        z-index: 6;
        height: 100em;
        width: 100em;
        border-radius: 40%;
        margin-top: -82em;
        margin-left: -54em;
    }
}
.nav-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}
.nav-pane {
    text-align: right;
    margin: $paneMargin;
    height: $paneHeight;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    font-family: 'Questrial', sans-serif;
    a {
        color: white;
        font-size: 20px;
        font-weight: bold;
        background: black;
        height: $paneHeight;
        padding: 6px 10px 0px 10px;
    }
    a.nuxt-link-exact-active {
        color: black;
        background: white;
    }
    .link {
        width: 110px;
        text-align: center;
        border-left: 5px solid white;
    }
}
.pane-5 {
    background-image: url('~/assets/images/orange.png');
    background-size: cover;
    width: 60%;
    background-position-y: 50%;
}
.pane-4 {
    background-image: url('~/assets/images/yellow.png');
    background-size: contain;
    width: 100%;
}
.pane-3 {
    background-image: url('~/assets/images/green2.png');
    background-size: cover;
    width: 54%;
    background-position-y: 100%;
}
.pane-2{
    background-image: url('~/assets/images/blue.png');
    background-size: cover;
    width: 70%;
    background-position-y: 28%;
}
.pane-1 {
    background-image: url('~/assets/images/purple.png');
    background-size: cover;
    width: 70%;
    background-position-y: 60px;
    background-position-x: -60px;
}

@media screen and (max-width: 1200px) {
    .container {
        margin-left: 0;
    }
    .pane-1, .pane-2, .pane-3, .pane-4, .pane-5 {
      background-image: none;
      width: 100%;
      margin: auto;
    }
    .link {
        margin: auto;
        border-left: none!important;
        border-radius: 5px;
        width: auto!important;
    }
    .nav-container {
        position: fixed;
        bottom: 0;
        width: 100%;
        z-index: 8;
        background-color: white;
        padding: 0em 0em 1em 0em;
    }
    .nav-toggle {
        margin: 0px auto;
        text-align: center;
        padding-top: 1em;
        padding-bottom: .5em;
        color: white;
        i {
            font-size: 26px;
        }
        p {
            font-size: 24px;
            font-weight: bold;
        }
    }
    .nav-pane {
        height: $mobilePaneHeight;
        a {
            height: 34px;
            font-size: 22px;
            padding: 0em 2.5em;
        }
        a.nuxt-link-exact-active {
            text-decoration: none;
        }
    }
    .menu {
        background-color: black!important;
    }
    .closed {
        margin-left: 10em;
    }
}

@media screen and (max-width: 576px) {
    .closed {
        margin-left: auto;
    }
}

